Fri Apr 21 08:58:50 1995  Theodore Y. Ts'o  <tytso@lurch.mit.edu>

	* krb5.h: krb5_princ_aref() doesn't work, and isn't used anywhere.
		Removed.  (So all of macros.h is gone.)

	* krb5.h, k5-int.h: Moved struct _krb5_context to k5-int.h

Thu Apr 20 12:15:54 1995 Keith Vetter (keithv@fusion.com)

	* krb5.h: Needs SIZEOF_INT, SIZEOF_LONG defined for the PC.

Wed Apr 29 10:00:00 1995 Keith Vetter (keithv@fusion.com)

	* Makefile.in: duplicated the file copying stuff from 
           ..\gssapi\generic so that all the copying stuff can be
           found in one place.

Thu Apr 20 11:32:09 1995    <tytso@rsx-11.mit.edu>

	* krb5.h, k5-int.h: Inlined the following include files, to
		simplify the header files which actually need to be
		installed: wordsize.h, base-defs.h, hostaddr.h,
		fieldbits.h, proto.h, macros.h, error_def.h, safepriv.h,
		ccache.h, rcache.h, keytab.h, func-proto.h, k5-free.h.
		Also moved the #include of k5-config.h and k5-errors.h to
		k5-int.h.

Wed Apr 19 13:23:39 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* krb5.h: Added default_realm pointer to krb5_context

Thu Apr 13 16:05:08 1995 Keith Vetter (keithv@fusion.com)

	* bsdlib.h, bstring.h, fake-std.h, syslog.h:  __STDC__ conditionals
           also check for the _WINDOWS define.
        * krb5.h: added FAR to pointers visible to the world.

Tue Mar 28 18:12:32 1995  John Gilmore  (gnu at toad.com)

	* Makefile.in (KRB5_HEADERS, install):  `Make install' now works.
	* configure.in (WITH_KRB5ROOT):  For `make install'.
	* krb5.h:  Include "k5-errors.h" rather than "errors.h".

Fri Mar 17 19:10:41 1995  John Gilmore  (gnu at toad.com)

	* krb5.h:  Move <sys/types> and u_long (etc) code to krb5/k5-config.h.
	It is needed there when NEED_SOCKETS is defined.
	* Makefile.in (all-mac, clean-mac):  Add.

Wed Mar 15 20:27:57 1995 Keith Vetter (keithv@fusion.com)

	* Makefile.in: added recursion into krb5 for the PC.

Fri Mar 10 10:18:50 1995  Chris Provenzano (proven@mit.edu)
